data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_736.wast
;; 7. **Test for Loop with Nested Conditional Branches on Varying Conditions**    - **Description**: Create nested conditional branches within a loop, with each employing a `br_if` instruction based on different local variables having distinct values to test branching decisions.    - **Constraint Checked**: Ensures complex nested conditions do not affect branching decisions.    - **Incorrect Condition Evaluation**: Examines if multiple conditional branches interfere, causing incorrect branches.

(assert_invalid
  (module
    (func $nested_conditional_branches (local i32) (local i32)
      (i32.const 0)
      (local.set 0)
      (i32.const 1)
      (local.set 1)
      (loop (param i32) (result i32)
        (local.get 0)
        (br_if 1)
        (local.get 1)
        (br_if 0)
        (i32.const 2)
      )
    )
  )
  "type mismatch"
)